welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:8: error: ';' expected but 'return' found.
  } return NbOccu
    ^